[package]
name = "ynab-api-client"
version = "0.1.0"
authors = ["Jake Hamilton <jakehamtexas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "2.33.0", features = ["suggestions", "color"] }
heck = "0.3.2"